crates/usd-pyo3/tests/usdValidation/bin/usdchecker/testUsdChecker/bad/zUp.usdc
version https://git-lfs.github.com/spec/v1
oid sha256:36c71dff83b57964e63319df7f81e71b0a85bf360c4b19e88836af70c50a995b
size 650
